# ozon_service/api/proto/ozon_service_pb2.py
@@ -1,0 +1,46 @@
+# -*- coding: utf-8 -*-
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# NO CHECKED-IN PROTOBUF GENCODE
+# source: ozon_service.proto
+# Protobuf Python Version: 5.29.0
+"""Generated protocol buffer code."""
+from google.protobuf import descriptor as _descriptor
+from google.protobuf import descriptor_pool as _descriptor_pool
+from google.protobuf import runtime_version as _runtime_version
+from google.protobuf import symbol_database as _symbol_database
+from google.protobuf.internal import builder as _builder
+_runtime_version.ValidateProtobufRuntimeVersion(
+    _runtime_version.Domain.PUBLIC,
+    5,
+    29,
+    0,
+    '',
+    'ozon_service.proto'
+)
+# @@protoc_insertion_point(imports)
+
+_sym_db = _symbol_database.Default()
+
+
+
+
+DESCRIPTOR = _descriptor_pool.Default().AddSerializedFile(b'\n\x12ozon_service.proto\x12\x04ozon\"9\n\rSearchRequest\x12\x0c\n\x04text\x18\x01 \x01(\t\x12\x0b\n\x03num\x18\x02 \x01(\x05\x12\r\n\x05order\x18\x03 \x01(\t\";\n\x0f\x43\x61tegoryRequest\x12\x0c\n\x04link\x18\x01 \x01(\t\x12\x0b\n\x03num\x18\x02 \x01(\x05\x12\r\n\x05order\x18\x03 \x01(\t\"9\n\rSellerRequest\x12\x0c\n\x04link\x18\x01 \x01(\t\x12\x0b\n\x03num\x18\x02 \x01(\x05\x12\r\n\x05order\x18\x03 \x01(\t\"\x8a\x01\n\x0fProductResponse\x12\x12\n\nproduct_id\x18\x01 \x01(\x05\x12\x0c\n\x04name\x18\x02 \x01(\t\x12\r\n\x05\x62rand\x18\x03 \x01(\t\x12\r\n\x05price\x18\x04 \x01(\x05\x12\x16\n\x0e\x64iscount_price\x18\x05 \x01(\x05\x12\x0e\n\x06rating\x18\x06 \x01(\x02\x12\x0f\n\x07reviews\x18\x07 \x01(\x05\"L\n\x13ListProductResponse\x12\x10\n\x08\x66ilename\x18\x01 \x01(\t\x12#\n\x04\x64\x61ta\x18\x02 \x03(\x0b\x32\x15.ozon.ProductResponse2\xbf\x01\n\x0bOzonService\x12\x38\n\x06search\x12\x13.ozon.SearchRequest\x1a\x19.ozon.ListProductResponse\x12<\n\x08\x63\x61tegory\x12\x15.ozon.CategoryRequest\x1a\x19.ozon.ListProductResponse\x12\x38\n\x06seller\x12\x13.ozon.SellerRequest\x1a\x19.ozon.ListProductResponseb\x06proto3')
+
+_globals = globals()
+_builder.BuildMessageAndEnumDescriptors(DESCRIPTOR, _globals)
+_builder.BuildTopDescriptorsAndMessages(DESCRIPTOR, 'ozon_service_pb2', _globals)
+if not _descriptor._USE_C_DESCRIPTORS:
+  DESCRIPTOR._loaded_options = None
+  _globals['_SEARCHREQUEST']._serialized_start=28
+  _globals['_SEARCHREQUEST']._serialized_end=85
+  _globals['_CATEGORYREQUEST']._serialized_start=87
+  _globals['_CATEGORYREQUEST']._serialized_end=146
+  _globals['_SELLERREQUEST']._serialized_start=148
+  _globals['_SELLERREQUEST']._serialized_end=205
+  _globals['_PRODUCTRESPONSE']._serialized_start=208
+  _globals['_PRODUCTRESPONSE']._serialized_end=346
+  _globals['_LISTPRODUCTRESPONSE']._serialized_start=348
+  _globals['_LISTPRODUCTRESPONSE']._serialized_end=424
+  _globals['_OZONSERVICE']._serialized_start=427
+  _globals['_OZONSERVICE']._serialized_end=618
+# @@protoc_insertion_point(module_scope)
